fix page overflow

--- a/tiffany.css
+++ b/tiffany.css
@@ -3,7 +3,6 @@ body {
   font-family: Playfair Display, serif, Arial, Helvetica;
   --link-color: #8231b1;
   z-index: -1;
-  display: inline-block;
   line-height: 2rem;
   background: linear-gradient(5deg, rgb(211, 229, 236), #f5dede);
 }
@@ -14,20 +13,9 @@ body {
   box-sizing: border-box;
 }
 
-h2 {
-  color: var(--link-color);
-  font-size: 2.25rem;
-  line-height: 2.25rem;
-  text-align: center;
-  letter-spacing: 0.10rem;
-  padding: 0 0 30px 0;
-}
-
 header {
   width: 100%;
-  height: 50vw;
-  min-height: 350px;
-  max-height: 500px;
+  height: 500px;
   position: relative;
 }
 
@@ -36,21 +24,19 @@ header #cloud {
   height: 100%;
   object-fit: cover;
   position: absolute;
-  max-height: 550px;
   opacity: 80%;
+  overflow: hidden;
 }
 
 header .title {
-  text-align: center;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 30%;
-  left: 50%;
-  transform: translate(-50%, -30%);
-  font-size: 2.4vh;
+  font-size: 40px;
   text-shadow: 0 0 20px #884daa, 0 0 20px red, 0 0 20px yellow;
   color: #58008b;
-  width: 100%;
-  height: auto;
+  text-align: center;
 }
 
 .social-media {
@@ -129,6 +115,11 @@ main {
   width: 100%;
 }
 
+main article {
+  width: 100%;
+  height: 100%;
+}
+
 main .side {
   display: flex;
   flex-direction: column;
@@ -157,6 +148,15 @@ main .side a:hover {
   transition: all 0.3s ease-in-out;
 }
 
+h2 {
+  color: var(--link-color);
+  font-size: 2.25rem;
+  line-height: 2.25rem;
+  text-align: center;
+  letter-spacing: 0.10rem;
+  padding: 0 0 30px 0;
+}
+
 .reviews-wrapper {
   display: flex;
   flex-direction: column;
@@ -167,18 +167,13 @@ main .side a:hover {
 .reviews, .location, .services, .schedule, .spa, .health, .eyelash, .penalty, .faq {
   display: flex;
   flex-direction: row;
-  clear: both;
-  width: 100%;
-  height: auto;
-  margin: 0;
-  padding: 0;
-  display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: auto;
 }
 
 .image {
-  display: block;
   width: 50%;
   height: 100%;
   display: flex;
@@ -192,7 +187,6 @@ main .side a:hover {
 
 .text {
   height: auto;
-  display: block;
   line-height: 25px;
   letter-spacing: 0.7px;
   display: flex;
